@@ -2,6 +2,7 @@
 v6.0.0-git
 ----------
 
+[mms] Optimize loading of message bodies when using dynamic view.
 [mms] Load new mailbox when renaming current mailbox in dynamic view (Request
       #11394).
 [mms] Add simple address autocompleter to smartmobile compose page.
